+setup: main fucntion overall implemented